Revert "backport for UI: Fix text overflow for long Secret and Auth names (#29430)"
This reverts commit eee76a43154f2593a09e5143ead64f71eda2257f.

--- a/ui/app/styles/components/linked-block.scss
+++ b/ui/app/styles/components/linked-block.scss
@@ -23,7 +23,3 @@
   grid-row: 1;
   align-self: center;
 }
-
-.linked-block-title {
-  grid-template-columns: minmax(0, 28px) minmax(0, 1fr);
-}
