--- a/ui/app/styles/helper-classes/flexbox-and-grid.scss
+++ b/ui/app/styles/helper-classes/flexbox-and-grid.scss
@@ -192,7 +192,3 @@
 .align-self-end {
   align-self: end;
 }
-
-.align-items-center {
-  align-items: center;
-}
